Fixed globe not visible

--- a/src/styles/Home/_header.scss
+++ b/src/styles/Home/_header.scss
@@ -101,7 +101,7 @@
 
   &__box {
     // width: 100%;
-    // background-color: orangered;
+
     margin-right: 3rem;
     img {
       width: 100%;
@@ -121,12 +121,15 @@
 
 @media (max-width: 1420px) {
   .header {
-    // min-height: 0;
     padding: 0 3rem;
 
     &__container {
       flex-direction: column;
       text-align: center;
+
+      &--left {
+        z-index: 10;
+      }
 
       &--right {
         display: inline-block;
@@ -134,8 +137,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        z-index: -1;
-        opacity: 0.1;
+        opacity: 0.2;
       }
     }
 
